Spinnaker/logs/stereo_image_proc/build.make.027.log
[ 14%] [34m[1mGenerating dynamic reconfigure files from cfg/Disparity.cfg: /home/stereo/newspin_ws/devel/.private/stereo_image_proc/include/stereo_image_proc/DisparityConfig.h /home/stereo/newspin_ws/devel/.private/stereo_image_proc/lib/python2.7/dist-packages/stereo_image_proc/cfg/DisparityConfig.py[0m
  File "/home/stereo/newspin_ws/src/image_pipeline/stereo_image_proc/cfg/Disparity.cfg", line 23
    gen.add("disparity_range",         int_t, 0, "Number of disparities to search, pixels", 64, 32, 4096)sadas
                                                                                                             ^
SyntaxError: invalid syntax
CMakeFiles/stereo_image_proc_gencfg.dir/build.make:63: recipe for target '/home/stereo/newspin_ws/devel/.private/stereo_image_proc/include/stereo_image_proc/DisparityConfig.h' failed
make[2]: *** [/home/stereo/newspin_ws/devel/.private/stereo_image_proc/include/stereo_image_proc/DisparityConfig.h] Error 1
CMakeFiles/Makefile2:1357: recipe for target 'CMakeFiles/stereo_image_proc_gencfg.dir/all' failed
make[1]: *** [CMakeFiles/stereo_image_proc_gencfg.dir/all] Error 2
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
